# AvionChatBackend

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  test.yml
.github/workflows/: deploy.yml  django.yml  run-tests.yml  test_deploy.yml  tests.yml
apps/accounts/: admin.py  apps.py  forms.py  models.py  serializer_fields.py  serializers.py  signal_handlers.py  urls.py  urls_template.py  views.py
apps/accounts/migrations/: 0001_initial.py  0002_user_avatar.py  0003_accountsettings.py  0004_user_is_online_user_last_seen_at.py  0005_alter_user_username.py  0006_alter_user_username.py  0007_alter_user_email.py  0008_userconfirmationcode.py  0009_userconfirmationcode_token.py  0010_alter_userconfirmationcode_code_and_more.py  0011_alter_userconfirmationcode_code_and_more.py  0012_accountsettings_deleted_at_and_more.py  0013_userconfirmationcode_attempts_alter_user_username.py  0014_alter_user_username.py  0015_alter_user_username.py  0016_alter_userconfirmationcode_code_type.py
apps/base/: models.py
apps/chat/: TODO  admin.py  consumers.py  db_operations.py  managers.py  models.py  routing.py  serializers.py  urls.py  utils.py  views.py
apps/chat/migrations/: 0001_initial.py  0002_chat_remove_privatechat_user1_and_more.py  0003_chat_user1_chat_user2.py  (+12 more)
apps/common/: tasks.py  utils.py
apps/posts/: TODO  models.py
core/: asgi.py  celery.py  schema.py  urls.py  wsgi.py
core/settings/: base.py
requirements/: base.txt  develop.txt
staticfiles/css/: styles.css
staticfiles/js/: app.js
templates/: base.html  navbar.html
(+13 files in other folders)
